# Generated by Django 4.2.28 on 2026-02-07 08:33

from django.conf import settings
import django.contrib.auth.models
import django.contrib.auth.validators
from django.db import migrations, models
import django.db.models.deletion
import django.utils.timezone


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='User',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('username', models.CharField(error_messages={'unique': 'A user with that username already exists.'}, help_text='Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.', max_length=150, unique=True, validators=[django.contrib.auth.validators.UnicodeUsernameValidator()], verbose_name='username')),
                ('first_name', models.CharField(blank=True, max_length=150, verbose_name='first name')),
                ('last_name', models.CharField(blank=True, max_length=150, verbose_name='last name')),
                ('email', models.EmailField(blank=True, max_length=254, verbose_name='email address')),
                ('is_staff', models.BooleanField(default=False, help_text='Designates whether the user can log into this admin site.', verbose_name='staff status')),
                ('is_active', models.BooleanField(default=True, help_text='Designates whether this user should be treated as active. Unselect this instead of deleting accounts.', verbose_name='active')),
                ('date_joined', models.DateTimeField(default=django.utils.timezone.now, verbose_name='date joined')),
                ('role', models.CharField(choices=[('admin', 'Admin'), ('student', 'Student')], default='student', max_length=10)),
                ('roll_number', models.CharField(blank=True, max_length=50, null=True, unique=True)),
                ('groups', models.ManyToManyField(blank=True, related_name='custom_user_set', related_query_name='custom_user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, related_name='custom_user_set', related_query_name='custom_user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'db_table': 'users',
            },
            managers=[
                ('objects', django.contrib.auth.models.UserManager()),
            ],
        ),
        migrations.CreateModel(
            name='Result',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('roll_number', models.CharField(db_index=True, max_length=50)),
                ('student_name', models.CharField(max_length=200)),
                ('semester', models.IntegerField()),
                ('result_type', models.CharField(choices=[('regular', 'Regular'), ('supplementary', 'Supplementary'), ('both', 'Both')], max_length=20)),
                ('overall_result', models.CharField(blank=True, max_length=50)),
                ('overall_grade', models.CharField(blank=True, max_length=10)),
                ('uploaded_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('student', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='results', to=settings.AUTH_USER_MODEL)),
                ('uploaded_by', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='uploaded_results', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'results',
            },
        ),
        migrations.CreateModel(
            name='Notification',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('message', models.TextField()),
                ('is_read', models.BooleanField(default=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('student', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='notifications', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'notifications',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='LoginAttempt',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('username', models.CharField(max_length=150)),
                ('ip_address', models.GenericIPAddressField()),
                ('timestamp', models.DateTimeField(auto_now_add=True)),
                ('success', models.BooleanField(default=False)),
            ],
            options={
                'db_table': 'login_attempts',
                'indexes': [models.Index(fields=['username', 'timestamp'], name='login_attem_usernam_ece61f_idx'), models.Index(fields=['ip_address', 'timestamp'], name='login_attem_ip_addr_340a7c_idx')],
            },
        ),
        migrations.CreateModel(
            name='AuditLog',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('action', models.CharField(choices=[('login', 'Login'), ('logout', 'Logout'), ('password_change', 'Password Change'), ('result_upload', 'Result Upload'), ('result_view', 'Result View'), ('result_edit', 'Result Edit'), ('result_delete', 'Result Delete'), ('user_registration', 'User Registration')], max_length=50)),
                ('details', models.TextField(blank=True)),
                ('ip_address', models.GenericIPAddressField(null=True)),
                ('timestamp', models.DateTimeField(auto_now_add=True)),
                ('user', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'audit_logs',
            },
        ),
        migrations.CreateModel(
            name='Subject',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('subject_code', models.CharField(max_length=50)),
                ('subject_name', models.CharField(max_length=200)),
                ('internal_marks', models.IntegerField(blank=True, null=True)),
                ('external_marks', models.IntegerField(blank=True, null=True)),
                ('total_marks', models.IntegerField(blank=True, null=True)),
                ('subject_result', models.CharField(choices=[('pass', 'Pass'), ('fail', 'Fail'), ('absent', 'Absent')], max_length=20)),
                ('grade', models.CharField(blank=True, max_length=10)),
                ('result', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='subjects', to='results.result')),
            ],
            options={
                'db_table': 'subjects',
                'indexes': [models.Index(fields=['subject_code'], name='subjects_subject_e16b01_idx')],
            },
        ),
        migrations.AddIndex(
            model_name='result',
            index=models.Index(fields=['roll_number', 'semester'], name='results_roll_nu_3f83e5_idx'),
        ),
        migrations.AddIndex(
            model_name='result',
            index=models.Index(fields=['uploaded_at'], name='results_uploade_02ae38_idx'),
        ),
        migrations.AlterUniqueTogether(
            name='result',
            unique_together={('roll_number', 'semester', 'result_type')},
        ),
        migrations.AddIndex(
            model_name='notification',
            index=models.Index(fields=['student', 'is_read', 'created_at'], name='notificatio_student_c24e79_idx'),
        ),
        migrations.AddIndex(
            model_name='auditlog',
            index=models.Index(fields=['user', 'timestamp'], name='audit_logs_user_id_88267f_idx'),
        ),
        migrations.AddIndex(
            model_name='auditlog',
            index=models.Index(fields=['action', 'timestamp'], name='audit_logs_action_474804_idx'),
        ),
    ]
